<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="#FFF3E3">


<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="cursive"
        android:text="@string/pizzeriatitle"
        android:textColor="?android:attr/colorPressedHighlight"
        android:textSize="50sp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="182dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="156dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/Phonenum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="60dp"
                android:layout_weight="1"
                android:text="@string/ask_pnumber"
                android:textSize="15sp"
                android:textColor="@color/purple_500"
                android:fontFamily="sans-serif-smallcaps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/PhoneNumEntered"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="45dp"
                android:ems="10"
                android:hint="@string/hint_phone_number"
                android:fontFamily="sans-serif-smallcaps"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColor="@color/purple_500"
                app:layout_constraintStart_toEndOf="@id/Phonenum"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/purple_500"
        android:text="@string/clickforpizza"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="203dp"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/DeluxeP"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/deluxe_pizza"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/deluxe" />

        <ImageButton
            android:id="@+id/HawaiianP"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hawaiian_pizza"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/hawaiian" />

        <ImageButton
            android:id="@+id/PepperoniP"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/pepperoni_pizza"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/pepperoni" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/CartOrderB"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/cart_order"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/cart" />

        <ImageButton
            android:id="@+id/StoreOrderB"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/store_order"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/store" />
    </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>