<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CartCustomizationActivity"
    android:background="#FFF4E5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CartCustHead"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:textColor="@color/purple_500"
                android:text="@string/Pizcust"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PizSizeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textColor="@color/purple_500"
                android:fontFamily="sans-serif-smallcaps"
                android:text="Size : " />

            <Spinner
                android:id="@+id/PizzaSizeL"
                android:layout_width="134dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:background="@drawable/border" />

            <ImageView
                android:id="@+id/Pizzaimg"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

               android:padding="3dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border"
                android:src="@drawable/cart" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textColor="@color/purple_500"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/AvailTop" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:textColor="@color/purple_500"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/SelecTop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="326dp"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/Atoppinglist"
                android:layout_width="120dp"
                android:layout_height="250dp"
                android:choiceMode="singleChoice"
                android:listSelector="#FFE700"
                android:layout_marginStart="10dp"
                android:background="@drawable/border"
                />

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="224dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/Addtoppingbutton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/add" />

                <Button
                    android:id="@+id/Removetoppingbutton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="15dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/remove" />
            </LinearLayout>

            <ListView
                android:id="@+id/Stoppinglist"
                android:layout_width="120dp"
                android:layout_height="250dp"
                android:background="@drawable/border"
                android:choiceMode="singleChoice"
                android:layout_marginEnd="10dp"
                android:listSelector="#FFE600"></ListView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Total3"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:textColor="@color/purple_500"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/total_amount" />

            <TextView
                android:id="@+id/PizTotal"
                android:layout_width="31dp"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_500"
                android:layout_weight="1" />

            <Button
                android:id="@+id/OrderPizzaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/order" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>