<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CartActivity"
    android:background="#FFF4E5"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="236dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Cart_Heading"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginStart="10dp"
                    android:textSize="40sp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="cursive"
                    android:textColor="@color/purple_500"
                    android:text="@string/Pizcart" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textColor="@color/purple_500"
                        android:text="@string/mbno" />

                    <TextView
                        android:id="@+id/editTextPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginTop="30dp"
                        android:ems="10"
                        />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="13dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Total1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/purple_500"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Sub Total        : $" />

                    <TextView
                        android:id="@+id/Total2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/purple_500"
                        android:layout_marginTop="45dp"
                        android:fontFamily="sans-serif-smallcaps"

                        android:text="Tax Total         : $" />

                    <TextView
                        android:id="@+id/Total3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="60dp"
                        android:textColor="@color/purple_500"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="Total Amount  : $" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/SubTotalLb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/purple_500"
                        android:text="" />

                    <TextView
                        android:id="@+id/TaxTotallb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="42dp"
                        android:textColor="@color/purple_500"
                        android:text="" />

                    <TextView
                        android:id="@+id/Totalamntlb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="58dp"
                        android:textColor="@color/purple_500"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/Pizzaadded"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:choiceMode="singleChoice"
            android:listSelector="#FFE700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <Button
                android:id="@+id/RemovePizzaBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/extrpizza" />

            <Button
                android:id="@+id/PlaceOrderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/plcorder" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>